# Slayer-of-Spire-2

./: .gitignore  README.md  projet layout.md  pyproject.toml  start_auto_training.bat
config/: auto_menu_mouse.example.json  auto_menu_mouse.local.json  auto_menu_sequences.example.json  mcp_api.example.json  memory_map.example.json  screen_map.example.json
docs/: dual-rl-training.md  mod-ingest-interface.md  reading-and-interface.md
runtime/: card_knowledge.generated.json  selfplay_metrics.jsonl
runtime/tensorboard/dual_rl/: events.out.tfevents.1774520313.DESKTOP-TETS2SP  events.out.tfevents.1774520790.DESKTOP-TETS2SP  events.out.tfevents.1774522143.DESKTOP-TETS2SP  events.out.tfevents.1774522630.DESKTOP-TETS2SP  events.out.tfevents.1774522789.DESKTOP-TETS2SP  events.out.tfevents.1774523007.DESKTOP-TETS2SP  events.out.tfevents.1774526311.DESKTOP-TETS2SP  (+286 more)
src/sos2_interface/: __init__.py  api.py  main.py  planner_main.py
src/sos2_interface.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tools/: auto_train_selfplay.py  build_action_dataset.py  build_card_knowledge_from_codex.py  build_combat_episode_dataset.py  capture_menu_mouse_config.py  debug_mcp_state.py  pick_screen_regions.py  run_planner.py  score_action_trace.py  start_sampling_training.py  start_training.py  train_action_value_model.py  train_branch_factor_weights.py  train_combat_policy_model.py  train_dual_rl_models.py  validate_card_knowledge.py  watch_state.py
tools/runtime/: planner_action_trace.selfplay.jsonl  selfplay_metrics.jsonl
(+28 files in other folders)
